--- a/src/test/resources/properties/Config.properties
+++ b/src/test/resources/properties/Config.properties
@@ -1,3 +1,3 @@
 browser=chrome
-testsiteurl=https://staging-indigo.summitech.ng/login
+testsiteurl=https://sandbox.mojecmeters.com/
 implicit.wait=10
