--- a/src/test/resources/properties/OR.properties
+++ b/src/test/resources/properties/OR.properties
@@ -1,37 +1,14 @@
-#Admin
-adminEmail_NAME= email
-adminEmail_XPATH = //*[@id='right']/form/div[1]/input
-adminEmailText =admin@indigo.com
-invalidAdminEmailText =admin@indigo.com1
-adminPass_XPATH =//*[@id='right']/form/div[2]/input
-adminPass_NAME =password
-adminPassText=password
-loginBtn_XPATH = //*[@id="right"]/form/input[2]
-SearchForPatient_XPATH = /html/body/section/div/div/div[3]/h1
-invalidEmail_XPATH=//*[@id='parsley-id-1540']/li
+#Home
+loginBtn_CLASSNAME = nav-link
+HomeloginBtn_XPATH = //*[@id="navbarTogglerDemo02"]/ul/li[4]/a
 
-#FRONTDESK
-frontDeskEmail_XPATH=//*[@id="right"]/form/div[1]/input
-frontDeskText=fagbohungbe@summitech.ng
-password_XPATH=//*[@id="right"]/form/div[2]/input
-passwordText=password
-signInBtn_XPATH = //*[@id="right"]/form/input[2]
-signInBtn= Button
-selectHospitalLocation_XPATH = //*[@id="right"]/h2
-selectHospital_XPATH = //*[@id="right"]/form/div/span[2]/span[1]/span
-EFHIkeja_ID = select2-hospital-result-rgy4-4
-EFHIkeja_XPATH = //*[@id="select2-hospital-result-plkv-4"]
-                 //*[@id="select2-hospital-result-rgy4-4"]
-saveBtn_XPATH = //*[@id="right"]/form/input[2]
-
-
-#SALE
-salesEmail_XPATH =//*[@id="right"]/form/div[1]/input
-salesText= idowuoluwabunmeey@gmail.com
-pass_XPATH =//*[@id="right"]/form/div[2]/input
-passText =password
-SignInBtn_XPATH=//*[@id="right"]/form/input[2]
-signInBtn=Button
-sales_XPATH = /html/body/nav[1]/ul/li[3]/a
-
-#WARD
+#Login
+email_ID = username
+email_TEXT = figbo4real@yahoo.com
+invalidEmail_TEXT = figbo4real@yahoo.com2
+password_ID = password
+password_TEXT = password
+loginBtn_CLASSNAME = btn
+loginBtn_XPATH = /html/body/jhi-main/div/div/jhi-login/jhi-guest-form-wrapper/div/div/div/div[1]/div[2]/form/button
+alert_CLASSNAME = alert
+alert_TEXT = Your Credential is not Correct
