--- a/src/test/resources/properties/OR.properties
+++ b/src/test/resources/properties/OR.properties
@@ -12,3 +12,6 @@ loginBtn_CLASSNAME = btn
 loginBtn_XPATH = /html/body/jhi-main/div/div/jhi-login/jhi-guest-form-wrapper/div/div/div/div[1]/div[2]/form/button
 alert_CLASSNAME = alert
 alert_TEXT = Your Credential is not Correct
+alert_ID = alert
+alert_TEXT = Dashboard
+
